# job-tracker-with-AI

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0cc2e5fea8d1_initial_schema.py  847f6856d847_add_ai_fields_to_applications.py
backend/app/: config.py  database.py  dependencies.py  models.py  schemas.py  security.py
backend/app/routers/: applications.py  auth.py  users.py
backend/app/services/: ai.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_contacts.py  test_interactions.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: layout.tsx  providers.tsx
frontend/app/applications/: AddApplicationForm.tsx  StatusBadge.tsx  page.tsx
frontend/app/applications/[id]/: ContactModal.tsx  ContactsSection.tsx  InteractionModal.tsx  InteractionSection.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts  types.ts  useRequireAuth.ts
